# synopso

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
core/: fetch_papers.py  main.py  models.py
core/parsers/: pdf_parser.py
core/share/: telegram.py
core/summarizers/: summarize.py
core/templates/: summarize_paper.py
notebooks/: test.ipynb
scripts/: fetch_papers.py
