[project]
name = "synopso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openai>=1.54.5",
    "pypdf>=5.1.0",
    "python-telegram-bot>=21.7",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
