[project]
name = "synopso"
version = "0.1.0"
description = "Daily AI research paper summarizer — HuggingFace Papers → any LLM via LiteLLM → Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "litellm>=1.89.3",
    "lxml>=5.3.0",
    "pypdf>=5.1.0",
    "python-telegram-bot>=21.7",
    "requests>=2.32.3",
    "tenacity>=9.1.4",
]

[project.scripts]
synopso = "core.main:run_main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
